tests/error/initializing_empty_struct.c
// fail "Cannot initialize an empty structure with non-empty initializer-list."
struct {} x = { 10 };
